Got the am/pm label to appear correctly

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <body>
         <article>
 
-            <p class="clock"><span class="hr">12</span>:<span class="min">10</span>:<span class="sec">00</span></p>
-            <button type="button" class="civil">Civilian Time</button> <!-- Default of option to switch to civil -->
-            <p class="amOrPm"></p>
+            <p class="clock"><span class="hr">00</span>:<span class="min">00</span>:<span class="sec">00</span></p>
+            <p>change to:</p>
+            <button type="button" class="civil">Civilian Time</button> <!-- Default of option to switch to civil. -->
+            <p class="amPm">PM</p>
 
         </article>
        
